# esc64

./: .gitignore  LICENSE  README.md  TODO  build-all.py  fixstuff  rebuild-c-stuff.mk
assembler/: .gitignore  CMakeLists.txt  Makefile  clean.sh  comment_line_cmds.sed  esctypes.h  hashset.c  hashset.h  main.c  map.c  map.h  notes.txt  scanner.c  scanner.h  symtable.c  symtable.h  tokendescr.c  tokendescr.h
assembler/as/: CMakeLists.txt
assembler/as/src/: main.c
assembler/common/: CMakeLists.txt
assembler/common/include/esc64asm/: ioutils.h  objcode.h  parser.h  reswords.h  symtable.h
assembler/common/src/: ioutils.c  link.c  map.c  objrecord.c  parser.c  reswords.c  scanner.c  symtable.c  tokendescr.c
assembler/exedump/: CMakeLists.txt
assembler/exedump/src/: main.c
assembler/include/: esctypes.h  hashset.h  ioutils.h  link.h  objcode.h  objrecord.h  parser.h  reswords.h  scanner.h  symtable.h  tokendescr.h
assembler/include/esc64asm/: align.h  assembler.h  cmddescr.h  decomp.h  escerror.h  esctypes.h  freelist.h  ioutils.h  keywords.h  link.h  mempool.h  obj.h  objcode.h  objread.h  objrecord.h  objwrite.h  opcodes.h  opcodetrans.h  parser.h  pstring.h  registers.h  reswords.h  scanner.h  symtable.h  token.h  tokendescr.h
assembler/kwgen/: descriptions.rb  interpreter.rb
assembler/ln/: CMakeLists.txt
assembler/ln/src/: main.c
assembler/objdump/: CMakeLists.txt
assembler/objdump/include/: opcodetrans.h
assembler/objdump/src/: main.c  opcodetrans.c
assembler/src/: align.c  as.c  assembler.c  decomp.c  escerror.c  exedump.c  exetolst.c  freelist.c  hashset.c  ioutils.c  keywords.c  link.c  ln.c  main.c  mempool.c  objcode.c  objdump.c  objread.c  objrecord.c  objwrite.c  opcodes.c  opcodetrans.c  parser.c  reswords.c  scanner.c  symtable.c  token.c  tokendescr.c
assembler/src/tests/: exec_write_read_test.c  freelist_test.c  main.c  objfile_test.c  parser_test.c  record_test.c  reswords_test.c  scanner_test.c  symtable_test.c
assembler/test_asm_code/: scanner_test.asm
assembler/testfiles/: .gitignore  scanner_test.asm
assembler/testfiles/div/: Makefile  div.s
assembler/testfiles/mul/: Makefile  main.s  mul.s
assembler/testfiles/mul2/: Makefile  main.s  mul.s
assembler/testfiles/test_prgm_1/: Makefile  copy.s  main.asm
assembler/unit_tests/: CMakeLists.txt  exec_write_read_test.c  main.c  objfile_test.c  parser_test.c  record_test.c  record_test_data.inl  reswords_test.c  scanner_test.c  symtable_test.c  symtable_test_data.inl
assembler/unit_tests/src/: exec_write_read_test.c  main.c  objfile_test.c  reswords_test.c  scanner_test.c  symtable_test.c
c-programs-esc64/: .gitignore  Makefile-template  esc64-build-v2.mk  esc64-build.mk  genobjpaths.rb  makefile-template  makefile-template-v2  runtests.mk
c-programs-esc64/advent/: .gitignore  Makefile
c-programs-esc64/base64/: Makefile
c-programs-esc64/base64test/: .gitignore  Makefile
c-programs-esc64/common/: Makefile
c-programs-esc64/con2reg/: Makefile
c-programs-esc64/context/: .gitignore  Makefile
c-programs-esc64/context-test/: .gitignore  Makefile
c-programs-esc64/conv/: .gitignore  Makefile  gen.py
c-programs-esc64/conv-test/: gen.py
c-programs-esc64/coroutines/: Makefile
c-programs-esc64/delaytest/: .gitignore  Makefile
c-programs-esc64/div-test/: gen.py
c-programs-esc64/echo/: Makefile
c-programs-esc64/errortest/: Makefile
c-programs-esc64/escio/: Makefile
c-programs-esc64/fib/: Makefile
c-programs-esc64/functest/: Makefile
c-programs-esc64/globaltest/: Makefile
c-programs-esc64/iotest/: Makefile
c-programs-esc64/memtest/: .gitignore  Makefile
c-programs-esc64/mul-test/: Makefile  test
c-programs-esc64/prime-demo/: Makefile
c-programs-esc64/prime-test/: Makefile
c-programs-esc64/puts-test/: .gitignore  Makefile
c-programs-esc64/shift-test/: Makefile
c-programs-esc64/sprintftest/: Makefile
c-programs-esc64/stdesc/: Makefile
c-programs-esc64/switchtest/: Makefile
c-programs-esc64/tanky/: Makefile
c-programs-esc64/varargs-test/: .gitignore  Makefile
c-programs-esc64/wumpus/: Makefile
common/: cpu.h
crt/: Makefile  esccrt.h  esccrt.inc  esccrt.s  esccrt2.inc
esc-asm-programs/: .gitignore  Makefile-template
esc-asm-programs/college_example/: Makefile  example.s
esc-asm-programs/div/: Makefile  main.s
esc-asm-programs/exptest/: .gitignore  Makefile  (+1 more)
infogen/: descriptions.rb  interpreter.rb  mooiecss.css
lib/: buildall.sh
lib/Memory/: .gitignore  CMakeLists.txt  MemoryConfig.cmake
lib/Memory/include/: verilogmem.lex.h
lib/Memory/src/: VerilogmemTest.cpp  verilogmem.lex  verilogmem.lex.cpp
lib/VirtualIO/: CMakeLists.txt  VirtualIOConfig.cmake
lib/VirtualIO/include/: RAM.hpp  VirtualIO.hpp  VirtualIOStream.hpp  VirtualOStream.hpp
lib/VirtualIO/src/: RAM.cpp  VirtualIO.cpp  VirtualIOStream.cpp  VirtualOStream.cpp
pcb-schematics/: .gitignore
schematics/: 744078.sym  ALU.sch  ALU.sym  GPRegister.sch  GPRegister.sym  atmega328p.sym  bRegister.sch  bRegister.sym  computer.sch  control_unit.sym  cpu.sch  cpu.sym  create_svg.sh  dev_usart.sch  dev_usart.sym  gen_pinseq.py  gp_register.sym  ir.sch  ir.sym  mSeq.sch  mSeq.sym  pc.sch  pc.sym  regfile.sch  regfile.sym  regsel.sch  regsel.sym  rwRegister.sch  rwRegister.sym  sram.sch  sram.sym  status.sch  status.sym
sim/: .gitignore  Makefile  copy_program.sh  copy_urom.sh  globals.v  run_sim.sh  service.thrift  test.sh
simpy/: Makefile  simpy.py
uassembler/: .gitignore  Makefile  bin_table.c  bin_table.h  gen_urom.c  gen_urom_stable.c  rom.lst  split.sh  uassembler  uassembler.c  uassembler.h  urom.lst  verilog_controlwires_to_uassembler_fielddescriptions_regex
utils/: interactive_ccontrol.py
vm/: .gitignore  CMakeLists.txt
vm/src/: BreakPoint.cs  Breakpoint.cs  ESC64.cpp  ESC64.hpp  ESC64VM.ESCWindow.cs  ESCWindow.cs  ExecuteInstruction.cs  Instruction.cs  InstructionDescr.cs  Makefile  MemoryModule.cs  Opcodes.cs  Program.cs  Register.cs  RegisterFile.cs  StatusRegister.cs  VirtualMachine.cs  compiler_invocation.txt  gui.stetic  main.cpp
(+436 files in other folders)
